# lang-chain-graph-rag

./: .gitattributes  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
data/eval/: eval_report.json  golden_dataset.json
prompts/rag/: v1.yaml  v2.yaml
scripts/: ci_eval.py  evaluate.py  ingest.py  query.py
src/: config.py
src/evaluation/: evaluator.py
src/generation/: generator.py  prompt_templates.py
src/ingestion/: chunker.py  loader.py
src/pipeline/: rag_chain.py  rag_chain_v2.py
src/retrieval/: bm25_retriever.py  hybrid_retriever.py  reranker.py  retriever.py  vector_store.py
tests/: test_bm25_retriever.py  test_chunker.py  test_ci_eval.py  test_evaluator.py  test_hybrid_retriever.py  test_loader.py  test_prompt_templates.py  test_rag_chain.py  test_rag_chain_v2.py  test_reranker.py  test_retriever.py  test_vector_store.py
